# pyrstine

./: .gitignore  .prettierignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
src/: index.ts
style/: variables.css
